<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/app_toolbar"
        layout="@layout/app_toolbar" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:padding="5dip">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/blue"
            android:textSize="20dip"
            android:visibility="gone"></TextView>

        <TextView
            android:id="@+id/login_username_ET"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/hint_login_passcode_text"
            android:inputType="textPersonName"
            android:visibility="gone"></TextView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/blue"
            android:textSize="20dip"
            android:visibility="gone"></TextView>

        <EditText
            android:id="@+id/login_password_ET"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/hint_login_password"
            android:inputType="textPassword"
            android:textSize="20dp"></EditText>

        <Button
            android:id="@+id/login_submit_Btn"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_bg"

            android:elevation="0dp"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/c0"
            android:textSize="20sp"
            android:textStyle="normal|bold"></Button>
    </LinearLayout>
</LinearLayout>